# PhoegTransRust

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  run-par.sh
.cargo/: config.toml
benches/: rotation.rs
cpp_util/: souffleUtil.hpp
datalog/: basic.dl  definitions.dl  mapping1.dl  relabel.dl
examples/: grant.pgschema  grant2.pgschema  naive.pgschema  target.pgschema
src/: compute.rs  errors.rs  graph_transformation.rs  lib.rs  main.rs  property_graph.rs  similarity.rs  transformation.rs  utils.rs
src/neo4j/: mod.rs
src/parsing/: PropertyGraph.pest  mod.rs
src/transformation/: mod.rs
src/transformation/souffle/: mod.rs  souffle_ffi_template.rs
