[package]
name = "transrust"
version = "1.0.0-alpha"
authors = ["Gauvain Devillez <gauvain.devillez@umons.ac.be>"]
edition="2018"

[dependencies]
rayon = "1.0"
#graph = {git = "https://github.com/umons-dept-comp-sci/PhoegRustGraph.git", branch = "orbits-main"}
graph = {path = "../graph"}
time = "0.1"
docopt = "0.8"
serde={version="1.0", features=["derive"]}
log = "0.4"
env_logger = "0.5"
lazy_static = "1.1"
thiserror = "1.0"
redis="0.20"

[lib]
name="transrust_lib"
path="src/lib.rs"

[dev-dependencies]
criterion = {version="0.3.5", features=["html_reports"]}

[[bench]]
name = "rotation"
harness = false
